--- a/数据结构/树试题.md
+++ b/数据结构/树试题.md
@@ -56,3 +56,63 @@ LeetCode试题
 
 思路：使用中序遍历，为有序数组，记录当前和上一个值，使用者2个值对一个数字进行计数，并且更新最大计数值如果当前最大计数值与之前记录的最大计数值相同，则数组添加新众数，否则覆盖原来众数列表，注意变量作用域
 
+#530 二叉搜索树的最小绝对差
+
+思路：同#501，也要使用公共变量，使用中序遍历，获取前后差值的最小作为最终返回值
+
+#538 把二叉搜索树转换为累加树
+
+思路：同之前的二叉搜索树，但是这里使用反向中序遍历，即从大到小遍历，也就是右中左遍历，把之前遍历的树都push到数组中，然后对每个当前节点值使用累加计算和
+
+#543 二叉树的直径
+
+思路：就是计算左右子树的最高高度和，当遇到叶子节点则返回0 ，每次递归返回的是高度，而直径使用公共变量来保存，每次计算对比最大直径并且替换
+
+#559 N叉树的最大深度
+
+思路：同二叉树最大深度，这里需要遍历所有子节点，计算其中最大的深度作为当前节点最大深度，然后返回深度+1
+
+#563 二叉树的坡度
+
+思路：使用公共变量记录所有节点的坡度和，递归返回的是此节点的所有节点和包括自身节点值，上层节点对比左右子树的和差的绝对值作为当前节点的坡度累计到sum中
+
+#572 另一个树的子树
+
+思路：单独写一个判断二叉树相等的函数，主函数中判断当前节点值与对比树的根节点值是否相同，相同则判断2个树是否相同。有一个特殊情况，有可能节点的值是重复的，所以也要或上，左右子树与对比树的比对，只要满足一个匹配成即可。如果当前节点与对比根节点不同则递归左右节点，注意点，必须是子树匹配
+
+#589 N叉树的前序遍历
+
+思路：思路同二叉树，把当前值push进遍历数组，对children进行循环递归
+
+#590 N叉树的后序遍历
+
+思路：同二叉树，对children进行循环递归，再把当前值push进遍历数组
+
+#606 根据二叉树创建字符串
+
+思路：如果当前是叶子节点则直接返回当前节点值，如果当前右子树为null，则返回 当前节点值（左节点值），其他情况都存在则正常返回 当前节点值（左节点值）（右节点值）
+
+#617 合并二叉树
+
+思路：判断当前2节点是否都存在，都存在则合并值，并且继续递归合并左右子树，否则返回左或者右存在的子树，注意默认返回节点
+
+#637 二叉树的层平均值
+
+思路：层次遍历，记录当前层的平均值，层次遍历使用队列来保存当前层节点
+
+#653 两数之和IV-输入BST
+
+思路：使用set存储当前遍历过的所有节点值，当目标值减去当前值的结果存在于set中，则说明存在2个节点值之和为k
+
+#669 修剪二叉搜索树
+
+思路：当前值小于下限则直接返回右子树，当前值大于上限则返回左子树，否则正常递归左右子树，并重新赋值，最后返回修剪的节点
+
+#671 二叉树中第二小的节点
+
+思路：由于最小的节点为根节点，所以需要找出左右子树中最小的节点值，且不等于根节点，否则返回-1
+
+#687 最长同值路径
+
+思路：递归，对比左右子树值是否与当前值相同，相同则路径加1，不同则清0，返回左右子树最长相同路径
+
