--- a/数据结构/数据结构.md
+++ b/数据结构/数据结构.md
@@ -237,6 +237,20 @@ console.log(loopQueue.isEmpty()) // true
 
 ![堆1](img/堆1.png)
 
+大堆顶排序步骤：
+
+1. 先构建一次大堆顶，即把堆中最大的数调整至堆顶
+2. 交换堆顶和数组当前未排序的尾部元素，数组未排序长度-1
+3. 再从堆顶向下调整，直到数组未排序长度为0
+
+单个非子叶节点的调整过程：
+
+1. 依次判断当前左右子节点与父节点的大小，把最大数交换至父节点
+2. 如果还有子树，则迭代到子树，把子树作为当前调整的父节点
+3. 直到数组未排序尾部
+
+注意：如果子树已经是已排序的堆时，当父节点需要和当前已排序的子节点交换时，还需再对子树进行排序，直到子树调整完成；如果当前的子节点不大于父节，那么毋庸置疑子树中的所有元素都小于父节点，因为子树也是一个大堆顶
+
 代码演示实现堆操作
 
 ```js 堆操作
